Markup cleanup, fixed menu entries, moved installation to an appendix
svn path=/trunk/kdesdk/doc/umbrello/; revision=204667

--- a/doc/authors.docbook
+++ b/doc/authors.docbook
@@ -2,28 +2,28 @@
 <title>Authors and History</title>
 <para>
 This project was started by Paul Hensgen as one of his University projects.
-The original name of the application was <emphasis>UML Modeller</emphasis>.  Paul did
+The original name of the application was <application>UML Modeller</application>.  Paul did
 all the development until the end of 2001 when the program reached version 1.0.
 </para>
 <para>
 Version 1.0 already offered a lot of functionality, but after the project had been reviewed at
 Paul's University, other developers could join and they started making valuable contributions
-to UML Modeller, like switching from a binary file format to an XML file, support for more
-types of UML Diagrams, Code Generation and Code Import just to name a few.
+to <application>UML Modeller</application>, like switching from a binary file format to an &XML; file, support for more
+types of &UML; Diagrams, Code Generation and Code Import just to name a few.
 </para>
 <para>
 Paul had to retire from the development team in Summer 2002 but, as Free and Open Source Software, the
 program continues to improve and evolve, and is being maintained by a group of developers from different
-parts of the world. Also, in September 2002, the project changed its name from UML Modeller, to
-<emphasis>Umbrello UML Modeller</emphasis>. There are several reasons for the change of names, the most
-important ones being that just <quote>uml</quote>--as it was commonly known-- was a way too generic name
+parts of the world. Also, in September 2002, the project changed its name from <application>&UML; Modeller</application>, to
+&umbrello;. There are several reasons for the change of names, the most
+important ones being that just <quote>uml</quote> &mdash; as it was commonly known &mdash; was a much too generic name
 and caused problems with some distributions. The other important reason is that the developers think
-<emphasis>Umbrello</emphasis> is a much cooler name. =)
+<application>Umbrello</application> is a much cooler name.
 </para>
 <para>
-The Development of Umbrello as well as discussions as to where the program should head for future versions
+The development of &umbrello; as well as discussions as to where the program should head for future versions
 is open and takes place over the Internet. If you would like to contribute to the project, please don't
-hesitate to contact the developers. There are many ways in which you can help Umbrello:
+hesitate to contact the developers. There are many ways in which you can help &umbrello;:
 </para>
 <itemizedlist>
 <listitem><para>Reporting bugs or improvements suggestions</para></listitem>
@@ -36,17 +36,6 @@ As you see, there are many ways in which you can contribute. All of them are ver
 everyone is welcome to participate.
 </para>
 <para>
-The Umbrello developers can be reached at <email>uml-devel@lists.sourceforge.net</email>.
+The &umbrello; developers can be reached at <email>uml-devel@lists.sourceforge.net</email>.
 </para>
-</chapter>
-<chapter id="copyright">
-<title>Copyright</title>
-<para>This program is released under the GNU General Public License.  For more information about the GPL,
-select (from the menu) <menuchoice><guimenu>Help</guimenu><guimenuitem>About Umbrello UML Modeller</guimenuitem></menuchoice> and click on the License tab.
-</para>
-<para>Copyright 2001, Paul Hensgen</para>
-<para>Copyright 2002, The Umbrello developers. See <ulink url="http://uml.sf.net">uml.sf.net</ulink> 
-for more information</para>
-<para>This documentation is copyright 2002 Luis De la Parra and may be copied under the terms
-of the GNU Free Documentation License, version 1.1.  <!-- FIXME, 1.2 is out now --></para>
 </chapter>
