--- a/doc/faq.docbook
+++ b/doc/faq.docbook
@@ -1,16 +1,16 @@
 <chapter id="faq">
-<title>FAQ - Frequently Asked Questions</title>
+<title><acronym>FAQ</acronym> &mdash;Frequently Asked Questions</title>
 <qandaset>
 
 <qandaentry>
 <question>
-<para>There are UML Icons missing in my toolbar, where are they?</para>
+<para>There are &UML; icons missing in my toolbar, where are they?</para>
 </question>
 <answer>
-<para>You probably not installed Umbrello correctly, and it cannot find the icons.</para>
-<para>If you installed Umbrello from a pre-compiled binary package, please contact the packager
+<para>You probably not installed &umbrello; correctly, and it cannot find the icons.</para>
+<para>If you installed &umbrello; from a pre-compiled binary package, please contact the packager
 and inform him about this so that he can fix the package. If you installed from source you probably
-did not pass the correct <userinput><option>--prefix</option></userinput> argument to <command>configure</command>.
+did not pass the correct <option>--prefix</option> argument to <command>configure</command>.
 Please read the installation chapter of this documentation.
 </para>
 </answer>
@@ -21,12 +21,12 @@ Please read the installation chapter of this documentation.
 <para>I have another question not answered by this documentation, where can I find further information?</para>
 </question>
 <answer>
-<para>If you have a question about usage of Umbrello or about UML in general, you can subscribe and write
-a mail to the Umbrello's user list at <email>uml-user@lists.sourceforge.net</email>
+<para>If you have a question about usage of &umbrello; or about &UML; in general, you can subscribe and write
+a mail to the &umbrello;'s user list at <email>uml-user@lists.sourceforge.net</email>
 </para>
 <para>
-If you have a question about Umbrello's development, you can contact the developers directly by subscribing
-and sending a mail to the Umbrello's developers list at <email>uml-devel@lists.sourceforge.net</email>
+If you have a question about &umbrello;'s development, you can contact the developers directly by subscribing
+and sending a mail to the &umbrello;'s developers list at <email>uml-devel@lists.sourceforge.net</email>
 </para>
 <para>
 Further information and contact addresses, as well as archives of the mailing lists can be found on 
