--- a/doc/installation.docbook
+++ b/doc/installation.docbook
@@ -1,36 +1,50 @@
-<chapter id="installation">
+<appendix id="installation">
 <title>Installation</title>
 
 <sect1 id="general_instructions">
 <title>General Instructions</title>
 <para>
-The easiest way to install Umbrello is to get a pre-compiled binary package (rpm, deb) for your system.
-<!-- If you are running Linux, chances are that your distribution includes Umbrello UML Modeller, 
-so you can install
-it directly from your CDs. FIXME not true as far as I know -->
+The easiest way to install &umbrello; is to get a pre-compiled binary package for your system.
+
+<!-- If you are running Linux, chances are that your distribution
+includes Umbrello UML Modeller, so you can install it directly from
+your CDs. FIXME not true as far as I know -->
+
+<!-- LW: Above is absolutely true now that it's part of KDE -->
+
 If you prefer to compile your applications yourself or are running a system
 for which there are no binary packages, you can download the sources and follow the instructions for
 source installations.
 </para>
-<para>
+
+<!-- LW: Removing, but leaving intact. No point having our translators
+work on this, it's largely irrelevant to apps in KDE releases, but
+umbrello developers might want to make a standalone release before 3.2
+is done -->
+
+
 <!--
+<para>
+
 The Umbrello developers only release source packages of the program, and these source packages are
 the only ones we can officially support. However, 
-FIXME I officially support the packages I make -->
+FIXME I officially support the packages I make
 We understand that for many users it is difficult to
 install a program from sources, so we try to build pre-compiled packages for the systems/distributions
 we have access to.
-If you want to install Umbrello from a binary package <!-- and the program is not included in your CDs, --> 
+If you want to install Umbrello from a binary package  
 you can check if there is a pre-compiled package available for your platform at
 <ulink url="http://uml.sourceforge.net">Umbrello's home page</ulink>.
 There we will publish the packages we can make ourselves, as well as packages made by 3rd parties for
 the systems we do not have access to.
 </para>
+
 <para>
 If you can make a binary package for a distribution for which there are currently no packages available
-at our site, please consider contacting the Umbrello developers and contributing your package so that
+at our site, please consider contacting the &umbrello;  developers and contributing your package so that
 other users can benefit from it.
-</para>
+</para> -->
+
 </sect1>
 
 <sect1 id="binary_installation">
@@ -58,6 +72,13 @@ For other platforms, please consult the documentation provided with your system.
 
 <sect1 id="source_installation">
 <title>Source Installation</title>
+
+&install.compile.documentation;
+
+<!-- LW: Leaving intact, in case umbrello makes a standalone release prior to KDE 3.2. -->
+<!-- Once Umbrello is being released as normal with the rest of KDE, individual -->
+<!-- instructions make no sense, and can be removed -->
+<!--
 <para>
 When installing from sources it is important that you check the README and INSTALL files 
 for the latest information on this program.
@@ -76,12 +97,12 @@ This will create a new directory into which all source files are contained.
 The next step is to change into this new directory to configure and build the program.
 For this you need to execute following commands:
 <screen width="40">
-<prompt>% </prompt><userinput>./configure --prefix=&lt;path to your KDE base directory here&gt;</userinput>
+<prompt>% </prompt><userinput>./configure &ndash;&ndash;prefix=&lt;path to your KDE base directory here&gt;</userinput>
 <prompt>% </prompt><userinput>make</userinput>
 </screen>
 </para>
 <para>
-Please substitute the correct path for your base KDE installation in the <quote>--prefix</quote>, as this
+Please substitute the correct path for your base KDE installation in the <quote>&ndash;-prefix</quote>, as this
 will make sure Umbrello finds all the files and libraries it needs to work correctly when you install it.
 </para>
 <para>
@@ -92,42 +113,43 @@ destination. Normally you will need root access for this, in which case you shou
 </screen>
 </para>
 <para>
-and then enter the root password. To finally install the program simply type
+and then enter the <systemitem> root password. To finally install the program simply type
 <screen width="40">
 <prompt>% </prompt><userinput>make install</userinput>
 </screen>                           
-</para>
+</para> -->
 </sect1>
 
 
 <sect1 id="running_program">
 <title>Starting the program</title>
 <para>
-Once you have installed Umbrello, you can run it from any command line by typing
-<screen width="40">
-<prompt>% </prompt><userinput>umbrello</userinput>
+Once you have installed &umbrello;, you can run it from any command line by typing:
+
+<screen>
+<prompt>%</prompt> <userinput><command>umbrello</command></userinput>
 </screen>
 </para>
 <para>
-Or by selecting the entry from the KDE menu.
-The program is located under the <guimenu>Development</guimenu> menu as <emphasis>Umbrello UML Modeller</emphasis>.
+Or by selecting the entry from the &kmenu;.
+The program is located under the <guimenu>Development</guimenu> menu as <guimenuitem>Umbrello UML Modeller</guimenuitem>.
 </para>
-<para>
+
 <screenshot>
-<screeninfo>Umbrello's main window</screeninfo>
+<screeninfo>&umbrello;'s main window</screeninfo>
 	<mediaobject>
 	  <imageobject>
 	    <imagedata fileref="pics/umbrello-main-screen.png" format="PNG"/>
 	  </imageobject>
 	  <textobject>
-	    <phrase>The main Window of Umbrello</phrase>
+	    <phrase>The main window of &umbrello;</phrase>
 	  </textobject>
 	  <caption>
-	    <para>The main Window of Umbrello
+	    <para>The main window of &umbrello;
 	    </para>
 	  </caption>
 	</mediaobject>
 </screenshot>
-</para>
+
 </sect1>
-</chapter>
+</appendix>
